fix word wrap in connections

--- a/sources/resources/public/css/local-after.css
+++ b/sources/resources/public/css/local-after.css
@@ -75,3 +75,6 @@ hr {
                                    not supported by any browser */
 }
 
+ul li {
+    word-break: break-all;
+}
